# spacetraders

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/backend/: .gitignore  pyproject.toml  requirements.ci.txt  requirements.dev.txt  requirements.txt
apps/backend/Dockerfiles/: Dockerfile
apps/backend/spacetraders/: cache_sample.py  example_response.json  examples.py  main.py  start_server.py
apps/backend/spacetraders/core/: config.py
apps/backend/spacetraders/core/env_files/: .env.example
apps/backend/spacetraders/routers/: api_router.py
apps/backend/spacetraders/routers/example/: example_router.py
apps/backend/spacetraders/schemas/: agent_schemas.py  contract_schemas.py  faction_schemas.py  ship_schemas.py
apps/backend/spacetraders/schemas/responses/: agent_responses.py
apps/backend/spacetraders/util/: constants.py  request_utils.py  serialization_utils.py  time_utils.py  validators.py
apps/backend/spacetraders/util/api/: healthcheck.py
apps/frontend/: README.md
spacetraders/: main.py
spacetraders/core/: config.py  constants.py
spacetraders/util/: request_utils.py  time_utils.py
